--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,9 @@
         </activity>
         <activity
             android:name=".Business_Home"
-            android:label="@string/title_activity_business__home"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light"
+            ></activity>
     </application>
 
 </manifest>
