final feature code before presentation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/alpha_a_circle_outline"
+        android:label="A.R.C."
+        android:roundIcon="@drawable/alpha_a_circle_outline"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"
+            android:name=".LoginActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:screenOrientation="portrait">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +27,32 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"
+
+            android:screenOrientation="portrait"
+            ></activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:screenOrientation="portrait"
+            ></activity>
+        <activity
             android:name=".Business_Home"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light"
+            android:screenOrientation="portrait"
+            ></activity>
+        <activity
+            android:name=".SettingActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light"
+            android:screenOrientation="portrait"
+            ></activity>
+        <activity
+            android:name=".AboutActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light"
             android:screenOrientation="portrait"
